config/prow/cluster/monitoring/base-prow/blackboxExporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: blackbox-exporter
        resources:
          limits:
             # Increased CPU limit
            cpu: 250m
      - name: kube-rbac-proxy
        resources:
          limits:
            # Increased CPU limit
            cpu: 50m
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker.gardener.cloud/system-components
                operator: In
                values:
                - "true"
