config/prow/cluster/monitoring/base-prow/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana
        volumeMounts:
        - $patch: delete
          name: grafana-dashboard-apiserver
          mountPath: /grafana-dashboard-definitions/0/apiserver
        - $patch: delete
          name: grafana-dashboard-controller-manager
          mountPath: /grafana-dashboard-definitions/0/controller-manager
        - $patch: delete
          name: grafana-dashboard-scheduler
          mountPath: /grafana-dashboard-definitions/0/scheduler
      volumes:
      - $patch: delete 
        name: grafana-dashboard-apiserver
      - $patch: delete 
        name: grafana-dashboard-controller-manager
      - $patch: delete 
        name: grafana-dashboard-scheduler
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker.gardener.cloud/system-components
                operator: In
                values:
                - "true"
