config/prow/cluster/monitoring/base-prow/kubeStateMetrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: kube-rbac-proxy-main
        resources:
          limits:
            # Increased CPU limit
            cpu: 300m
      - name: kube-rbac-proxy-self
        resources:
          limits:
            # Increased CPU limit
            cpu: 100m
