config/prow/cluster/monitoring/base-prow/nodeExporter-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: node-exporter
        resources:
          limits:
            # increased CPU limit
            cpu: 750m
      - name: kube-rbac-proxy
        resources:
          limits:
             # increased CPU limit
            cpu: 50m
