config/prow/cluster/monitoring/base-prow/prometheusAdapter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-adapter
  namespace: monitoring
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: worker.gardener.cloud/system-components
                operator: In
                values:
                - "true"
      topologySpreadConstraints: 
        - labelSelector:
            matchExpressions:
            - key: app.kubernetes.io/component
              operator: In
              values:
              - metrics-adapter
            - key: app.kubernetes.io/name
              operator: In
              values:
              - prometheus-adapter
            - key: app.kubernetes.io/part-of
              operator: In
              values:
              - kube-prometheus
          maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
