config/prow/cluster/monitoring/base-prow/prometheusOperator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: kube-rbac-proxy
        resources:
          limits:
            # Increased CPU limit
            cpu: 50m
