config/prow/cluster/monitoring/base-prow/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
  name: alertmanager-main
  namespace: monitoring
