config/prow/cluster/monitoring/base-prow/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
  name: prometheus-k8s
  namespace: monitoring
