config/prow/cluster/monitoring/base-prow/prometheusAdapter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
  name: prometheus-adapter
  namespace: monitoring
